Add user sql and user login (#611)
* Add user sql
* Add connection
* Fix CI
* Auth when open session
* Add doc
* Remove BitlapClient, refactor run raft
* optimize jdbc
* Fix context